# CSIML

./: .env  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirementx-dev.txt  setup.cfg
CSIML/: __init__.py
CSIML/analysis/: __init__.py  _base.py  _dataclass.py  common.py  cv.py  hyperparameter.py  io.py  main.py  weights.py
CSIML/cross_validation/: __init__.py  _dataclass.py  cv.py
CSIML/features/: __init__.py  features.py
CSIML/model/: __init__.py  _base.py  basis1.py  basis2.py  iml.py
CSIML/plot/: __init__.py  _base.py  _dataclass.py  distribution.py  errors.py  evaluation.py  hyperparameter.py
CSIML/utils/: __init__.py  rescale.py  timer.py
SIML/: __init__.py  analysis.py  cv.py  features.py  method.py  plot.py  siml.py
SIML/Analytics/: analysis.py
SIML/CV/: cv.py
SIML/Features/: features.py
SIML/Method/: base.py
SIML/Plot/: plot.py
SIML/analysis/: __init__.py  _base.py  _dataclass.py  analysis.py  cv.py  hyperparameter.py  io.py  main.py
SIML/cross_validation/: __init__.py  _dataclass.py  cv.py
SIML/features/: __init__.py  features.py
SIML/methods/: method.py
SIML/model/: __init__.py  _base.py  basis1.py  basis2.py  iml.py
SIML/plot/: __init__.py  _base.py  _dataclass.py  distribution.py  errors.py  evaluation.py  hyperparameter.py  periodic_table.py  periodictable.csv
SIML/utils/: __init__.py  rescale.py  timer.py
docs/source/: conf.py  index.rst
docs/source/advances/: analysis.rst  comparison.rst  figures.rst
docs/source/api/: CSIML.Analytics.rst  CSIML.CV.rst  CSIML.Features.rst  CSIML.Model.rst  CSIML.Plot.rst  CSIML.Utils.rst  SIML.Analytics.rst  SIML.CV.rst  SIML.Features.rst  SIML.Method.rst  SIML.Model.rst  SIML.Plot.rst  SIML.Utils.rst
docs/source/quickstart/: basics.rst  installation.rst
test/: costr.py  dt.py  op.py  test.css  test.ipynb  test.py  wb.py
