[tool.poetry]
name = "SIML"
version = "0.1.0"
description = "A library for studying small and imbalanced materials datasets"
authors = ["Li Shengzhou <s2036012@s.tsukuba.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zhonger/SIML"
repository = "https://github.com/zhonger/SIML"
documentation = "https://siml.readthedoc.io"
packages = [
    { include = "SIML", from = "."}
]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.0"
imbalanced-learn = "^0.11.0"
pandas = "^2.0.3"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
plotly = "^5.15.0"
seaborn = "^0.12.2"
openpyxl = "^3.0.10"
memory-profiler = "^0.61.0"

[tool.poetry.group.dev.dependencies]
poetry = "1.5.1"
Sphinx = "7.0.1"
furo = "2023.5.20"
sphinx-copybutton = "0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
