[metadata]
name = SIML
version = 0.0.1
author = zhonger
author_email = zhonger@live.cn
description = A package for studying small and imbalanced materials science datasets
url = https://github.com/zhonger/SIML
project_urls =
    Bug Tracker = https://github.com/zhonger/SIML/issues
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.10

[options.packages.find]
where = ./